--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 }
 div.score span{
     font-size: 28px;    
-}
+}   
 
 div.game-over a.restart{
     background-color: seagreen;
@@ -74,4 +74,12 @@ div.game-over a.restart{
     display: block;
     width: 150px;
     box-shadow: 0px 0px 2px rgba(0,0,0,.2), 0px 1px 2px rgba(0,0,0,.5);
+}
+#operands{
+    margin: 10px;
+    padding: 5px 10px;
+    outline: none;
+    border: 1px solid rgba(0,0,0,.1);    
+    border-radius: 3px;
+    color: rgba(0,0,0,.6);
 }
